<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:id="@+id/nested_recipe_recycler_view"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/ingredient_name"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_big_label_size" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ingredients_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/step_name"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_big_label_size" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/steps_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>